# kedro_text_pipe

./: README.md  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_processing.yml  parameters_data_science.yml
notebooks/: email_processing.ipynb  emails.ipynb  stats.json
src/texts/: __init__.py  __main__.py  settings.py
src/texts/pipelines/data_processing/: nodes.py  pipeline.py
src/texts/pipelines/data_science/: nodes.py  pipeline.py
