[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "texts"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
texts = "texts.__main__:main"

[tool.kedro]
package_name = "texts"
project_name = "texts"
kedro_init_version = "0.19.2"
tools = [ "Custom Logging", "Data Structure",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "texts.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.poetry]
name = "texts"
version = "0.1.0"
description = ""
authors = ["MaGeKo-Exxeta <matti.gerrit.korff@exxeta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
kedro = "^0.19.2"
kedro-viz = "^7.1.0"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
kedro-datasets = {extras = ["text"], version = "^2.0.0"}
jupyter = "^1.0.0"
presidio-analyzer = "^2.2.352"
presidio-anonymizer = "^2.2.352"
spacy = "^3.7.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
